tests/ui/traits/next-solver/assembly/ambiguity-due-to-uniquification-2.next.stderr
error[E0271]: type mismatch resolving `foo<'_, '_>::{opaque#0}<'_, '_> normalizes-to impl Trait<'_> + Trait<'_>`
  --> $DIR/ambiguity-due-to-uniquification-2.rs:16:26
   |
LL |     impls_trait::<'y, _>(foo::<'x, 'y>());
   |                          ^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `foo<'_, '_>::{opaque#0}<'_, '_> normalizes-to impl Trait<'_> + Trait<'_>`
  --> $DIR/ambiguity-due-to-uniquification-2.rs:16:5
   |
LL |     impls_trait::<'y, _>(foo::<'x, 'y>());
   |     ^^^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `foo<'_, '_>::{opaque#0}<'_, '_> normalizes-to impl Trait<'_> + Trait<'_>`
  --> $DIR/ambiguity-due-to-uniquification-2.rs:16:23
   |
LL |     impls_trait::<'y, _>(foo::<'x, 'y>());
   |                       ^ types differ

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0271`.
